# learnflix-example

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  justfile  mkdocs.yml  pyproject.toml
docs/: architecture.md  development.md  glossary.md  index.md  reference.md  requirements.md  roadmap.md
docs/user-stories/: index.md  registration.md
src/learnflix/: __init__.py  calc.py  main.py
tests/: test_calc.py
